<resources>
    <string name="app_name" translatable="false">UCOmove</string>
    <string name="app_description" translatable="false">La aplicación de transporte para el Campus Universitario de Rabanales de la UCO</string>
    <string name="app_version" translatable="false">%1$s v%2$s build %3$d</string>

    <string name="text_cordoba" translatable="false">Córdoba</string>
    <string name="text_rabanales" translatable="false">Rabanales</string>
    <string name="text_colon" translatable="false">Colón</string>
    <string name="text_train">Train</string>
    <string name="text_bus">Bus</string>
    <string name="text_schedule">Schedule</string>
    <string name="text_news">News</string>
    <string name="text_tickets">Tickets</string>
    <string name="text_settings">Settings</string>
    <string name="text_about">About</string>
    <string name="text_about_rate">Rate us on Google Play</string>
    <string name="text_about_twitter">Follow us on Twitter</string>

    <string name="error_no_estimations">No estimations</string>
    <string name="error_no_departures">No departures available today</string>
    <string name="error_no_estimations_today">No estimations available today</string>
    <string name="error_no_news">No news available</string>
    <string name="error_no_tickets">No tickets available</string>

    <string name="util_navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="util_navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string-array name="train_origins_name">
        <item>@string/text_cordoba</item>
        <item>@string/text_rabanales</item>
    </string-array>

    <string-array name="bus_origins_name">
        <item>@string/text_colon</item>
        <item>@string/text_rabanales</item>
    </string-array>

    <string-array name="transports_name">
        <item>@string/text_train</item>
        <item>@string/text_bus</item>
    </string-array>
</resources>
