<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_train"
            android:icon="@drawable/ic_menu_train"
            android:title="@string/text_train"/>
        <item
            android:id="@+id/nav_bus"
            android:icon="@drawable/ic_menu_bus"
            android:title="@string/text_bus"/>
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/text_schedule"/>
        <item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/ic_menu_tickets"
            android:title="@string/text_tickets"/>
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/text_news"/>
    </group>

    <group
        android:id="@+id/settings"
        android:checkableBehavior="single">
        <!--TODO Add Settings
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/text_settings"
            android:visible="false"/>-->
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/text_about"/>
    </group>
</menu>
