<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".about.AboutFragment">

        <android.support.v7.widget.CardView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="72dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/general_margin"
                android:paddingLeft="@dimen/general_margin"
                android:paddingRight="@dimen/general_margin"
                android:paddingTop="56dp">

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_version"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/general_margin"
                    android:gravity="center"
                    android:text="@string/app_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                <Button
                    android:id="@+id/twitter"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/general_margin"
                    android:drawableLeft="@drawable/ic_twitter"
                    android:drawablePadding="@dimen/general_margin_small"
                    android:text="@string/text_about_twitter"/>

                <Button
                    android:id="@+id/rate"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_google_play"
                    android:drawablePadding="@dimen/general_margin_small"
                    android:text="@string/text_about_rate"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:elevation="@dimen/small_elevation"
            android:src="@drawable/ic_logo_launcher"
            app:layout_anchor="@id/content"
            app:layout_anchorGravity="top|center"/>
    </android.support.design.widget.CoordinatorLayout>
</layout>
